<resources>
    <string name="app_name">Gorengan Indonesia</string>
    <string name="shared_preference">gorenganindonesia</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget nisl nec elit feugiat tincidunt. Sed nec bibendum ante. Curabitur at augue vel est vehicula euismod. Vestibulum sed ipsum non ex fringilla interdum. Aenean ac scelerisque odio. Nam euismod aliquet volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin justo libero, posuere nec nisi ut, tincidunt laoreet quam. Aenean varius, orci eu congue iaculis, erat nunc tempus odio, nec condimentum justo justo sit amet erat. Sed in justo nec augue tincidunt consectetur. Sed venenatis metus eu tortor consectetur, sit amet tristique metus laoreet. Nunc pellentesque nulla ut sem consectetur vulputate. In hac habitasse platea dictumst. Nunc a varius sem. Aenean quis erat eu ex mattis scelerisque vel et risus. Integer bibendum facilisis arcu eu tincidunt. Sed in elit nec felis bibendum laoreet. Nullam in odio nec justo euismod volutpat.
</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget nisl nec elit feugiat tincidunt. Sed nec bibendum ante.\n\nCurabitur at augue vel est vehicula euismod.</string>
    <string name="welcome_banner">Temukan Berbagai Gorengan Unik Khas Nusantara</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <array name="categories">
        <item>Aci</item>
        <item>Kedelai</item>
        <item>Buah</item>
        <item>Kentang</item>
        <item>Ikan</item>
        <item>Isian Sayur</item>
        <item>Manis</item>
    </array>
    <array name="difficulties">
        <item>Mudah</item>
        <item>Sedang</item>
        <item>Sukar</item>
    </array>
    <string name="cs_phone">6282257291200</string>
    <!-- TOS text   -->
    <string name="tos_intro_title">Terms and Conditions</string>
    <string name="tos_intro_content">Welcome to Gorengan Indonesia!\nThese terms and conditions outline the rules and regulations for the use of Gorengan Indonesia\'s Website, located at www.gorenganindonesia.com.\n\nBy accessing this application we assume you accept these terms and conditions. Do not continue to use Gorengan Indonesia if you do not agree to take all of the terms and conditions stated on this page.\n\nThe following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves.\n\nAll terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same. Our Terms and Conditions were created with the help of the Terms and Conditions Generator.</string>
    <string name="tos_cookie_title">Cookies</string>
    <string name="tos_cookie_content">We employ the use of cookies. By accessing Gorengan Indonesia, you agreed to use cookies in agreement with the Gorengan Indonesia\'s Privacy Policy.\nMost interactive websites use cookies to let us retrieve the user\'s details for each visit. Cookies are used by our website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our affiliate/advertising partners may also use cookies.</string>
    <string name="tos_license_title">License</string>
    <string name="tos_license_content">Unless otherwise stated, Gorengan Indonesia and/or its licensors own the intellectual property rights for all material on Gorengan Indonesia. All intellectual property rights are reserved. You may access this from Gorengan Indonesia for your own personal use subjected to restrictions set in these terms and conditions.\nYou must not:\n\n1. Republish material from Gorengan Indonesia\n2. Sell, rent or sub-license material from Gorengan Indonesia\n3. Reproduce, duplicate or copy material from Gorengan Indonesia\n4. Redistribute content from Gorengan Indonesia\n\nParts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. Gorengan Indonesia does not filter, edit, publish or review Comments prior to their presence on the website.\n\nComments do not reflect the views and opinions of Gorengan Indonesia,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions.\n\nTo the extent permitted by applicable laws, Gorengan Indonesia shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</string>
    <!-- App Info   -->
    <string name="app_info_title">Info Aplikasi</string>
    <string name="app_info_content">Gorengan Indonesia Version 0.0.9\n\nDeveloper Team:\n1. Alya Hamida (41521120047)\n2. Asrofil Fachrul Riidlo (41521120037)\n3. Ghina Faridah (41521120041)\n4. Riga Normanda Putra (41521120031)\n5. Sari Puspita Hasna (41521120016)\n6. Surya Aditya Angga Siswanto (41521120035)\n\n©2023 Mercu Buana University</string>
    <string name="link_source_code"><u>Link Source Code</u></string>
    <string name="link_repo">https://github.com/asrofilfachrulr/gorengan-indonesia</string>
</resources>