<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragments.Account.TermsOfServiceFragment"
    app:cardCornerRadius="7dp">
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:paddingHorizontal="7dp"
        android:paddingTop="14dp"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="18dp"
                    android:layout_marginVertical="7dp"
                    android:textColor="@color/black"
                    android:text="@string/tos_intro_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:textSize="14dp"
                    android:layout_marginVertical="7dp"
                    android:text="@string/tos_intro_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="18dp"
                    android:layout_marginVertical="7dp"
                    android:textColor="@color/black"
                    android:text="@string/tos_cookie_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:textSize="14dp"
                    android:layout_marginVertical="7dp"
                    android:text="@string/tos_cookie_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="18dp"
                    android:layout_marginVertical="7dp"
                    android:textColor="@color/black"
                    android:text="@string/tos_license_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:textSize="14dp"
                    android:layout_marginVertical="7dp"
                    android:text="@string/tos_license_content"/>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center|end">
            <Button
                android:id="@+id/btn_close_term_of_service_account"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                style="@style/btn_accent_solid_rounded"
                android:textColor="#fff"
                android:layout_marginEnd="14dp"
                android:text="Tutup"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>