<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="7dp"
    tools:context=".ui.Fragments.Account.TermsOfServiceFragment">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:paddingTop="14dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/app_info_title"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/app_info_content"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_link_sc_app_info_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_source_code"
                android:textColor="#57a0d4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_close_app_info_account"
                style="@style/btn_accent_solid_rounded"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="14dp"
                android:text="Tutup"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>